Kubernetes/MongoDB + Python Flask Web Framework + REST API + GKE/bookshelf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshelf-deployment
  labels:
    app: bookshelf-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookshelf-deployment
  template:
    metadata:
      labels:
        app: bookshelf-deployment
    spec:
      containers:
      - name: bookshelf-deployment
        image: zhou19539/bookshelf
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
