Kubernetes/MongoDB + Python Flask Web Framework + REST API + GKE/studentserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: studentserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: zhou19539/studentserver
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
